[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightcorn"
version = "0.4.0-alpha.3"
authors = [
    {name = "slpuk", email = "yarik6052@gmail.com"},
]
description = "A lightweight ASGI server for Python with zero dependencies"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["iot", "http", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://github.com/slpuk/lightcorn"
Documentation = "https://github.com/slpuk/lightcorn#readme"
Repository = "https://github.com/slpuk/lightcorn"
"Issue Tracker" = "https://github.com/slpuk/lightcorn/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
]

[tool.setuptools]
packages = ["lightcorn"]